[gd_scene load_steps=7 format=3 uid="uid://c0t3dj6fskv0t"]

[ext_resource type="Script" path="res://Scenes/MatchScene/MatchUI/TeamSelectionUI.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c62uwhs35dmk" path="res://Scenes/MatchScene/MatchUI/NameCard.tscn" id="3"]
[ext_resource type="Script" path="res://Scenes/MatchScene/MatchUI/PlayerStatsViewer.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://ckc4aneaqrwrv" path="res://Textures/AntiClockwiseArrow.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b6iyrxdl4j4cm" path="res://Textures/ClockwiseArrow.png" id="7"]

[sub_resource type="Theme" id="15"]
GridContainer/constants/h_separation = 50
GridContainer/constants/v_separation = 20
VBoxContainer/constants/separation = 20

[node name="TeamSelectionUI" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.443137)
script = ExtResource("1")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(0, 184)
points = PackedVector2Array(1920.37, -3.66284, -2.39679, -3.8028)
default_color = Color(0.839216, 0.623529, 0.207843, 1)

[node name="HumanTeamBench" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 62.2182
offset_top = 209.38
offset_right = 636.218
offset_bottom = 933.38
theme = SubResource("15")
columns = 2

[node name="NameCard1" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2

[node name="NameCard2" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2

[node name="NameCard3" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2

[node name="NameCard4" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2

[node name="NameCard5" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 808.0
offset_top = 197.0
offset_right = 1796.0
offset_bottom = 967.0
color = Color(0.839216, 0.623529, 0.207843, 1)

[node name="LiberoNameCard" parent="." instance=ExtResource("3")]
layout_mode = 0
offset_left = 656.129
offset_top = 726.075
offset_right = 906.129
offset_bottom = 826.075

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2(787.567, 462.377)
scale = Vector2(0.326706, 1.39676)
points = PackedVector2Array(3177.78, -3.66284, -2.39679, -3.8028)
default_color = Color(0.867188, 0.732952, 0.474243, 1)

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2(787.567, 218.695)
scale = Vector2(0.326706, 2.57903)
points = PackedVector2Array(3177.78, -3.66284, -2.39679, -3.8028)
default_color = Color(0, 0, 0, 1)

[node name="TeamName" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 5.0
offset_right = 1919.0
offset_bottom = 138.0
text = "Australia"

[node name="AcceptButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1490.36
offset_top = 947.916
offset_right = 1920.36
offset_bottom = 1079.92
text = "Accept"

[node name="CancelSubButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1059.87
offset_top = 945.024
offset_right = 1489.87
offset_bottom = 1077.03
text = "Cancel Sub"

[node name="HumanTeam" type="Control" parent="."]
anchors_preset = 0

[node name="NameCard1" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 1532.31
offset_top = 545.542
offset_right = 1782.31
offset_bottom = 645.542

[node name="NameCard2" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 1531.58
offset_top = 295.755
offset_right = 1781.58
offset_bottom = 395.755

[node name="NameCard3" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 1182.0
offset_top = 296.0
offset_right = 1432.0
offset_bottom = 396.0

[node name="NameCard4" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 832.0
offset_top = 295.0
offset_right = 1082.0
offset_bottom = 395.0

[node name="NameCard5" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 832.0
offset_top = 546.0
offset_right = 1082.0
offset_bottom = 646.0

[node name="NameCard6" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 1183.0
offset_top = 546.0
offset_right = 1433.0
offset_bottom = 646.0

[node name="PlayerStatsViewer" type="Panel" parent="."]
layout_mode = 0
offset_left = 57.3008
offset_top = 623.49
offset_right = 632.301
offset_bottom = 1015.49
script = ExtResource("5")

[node name="Name" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_top = 10.0
offset_right = 576.0
offset_bottom = 47.0
text = "Karteez Arminhalf"

[node name="Serve" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 36.0
offset_top = 58.0
offset_right = 290.0
offset_bottom = 95.0
text = "Serve: 99"

[node name="Receive" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 36.0
offset_top = 90.0
offset_right = 288.0
offset_bottom = 127.0
text = "Receive: 99"

[node name="Set" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 36.0
offset_top = 123.0
offset_right = 284.0
offset_bottom = 160.0
text = "Set: 99"

[node name="Block" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 36.0
offset_top = 155.0
offset_right = 287.0
offset_bottom = 192.0
text = "Block: 99"

[node name="Spike" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 300.0
offset_top = 58.0
offset_right = 577.0
offset_bottom = 95.0
text = "Spike: 99"

[node name="Speed" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 300.0
offset_top = 90.0
offset_right = 578.0
offset_bottom = 127.0
text = "Speed: 99"

[node name="SpikeHeight" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 300.0
offset_top = 123.0
offset_right = 576.0
offset_bottom = 160.0
text = "Spike Height: 99"

[node name="BlockHeight" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 300.0
offset_top = 155.0
offset_right = 576.0
offset_bottom = 192.0
text = "Block Height: 99"

[node name="RotationControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ClockwiseButton" type="Button" parent="RotationControl"]
layout_mode = 0
offset_left = 989.731
offset_top = 783.47
offset_right = 1078.73
offset_bottom = 911.47
icon = ExtResource("7")
expand_icon = true

[node name="AntiClockwiseButton" type="Button" parent="RotationControl"]
layout_mode = 0
offset_left = 1425.57
offset_top = 781.02
offset_right = 1516.57
offset_bottom = 913.02
icon = ExtResource("6")
expand_icon = true

[node name="Label" type="Label" parent="RotationControl"]
layout_mode = 0
offset_left = 1100.27
offset_top = 769.615
offset_right = 1401.27
offset_bottom = 902.615
text = "Rotate"

[connection signal="pressed" from="CancelSubButton" to="." method="_on_CancelSubButton_pressed"]
[connection signal="pressed" from="RotationControl/ClockwiseButton" to="." method="_on_ClockwiseButton_pressed"]
[connection signal="pressed" from="RotationControl/AntiClockwiseButton" to="." method="_on_AntiClockwiseButton_pressed"]
